# cf-xarray

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .tributors  .zenodo.json  CITATION.cff  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  setup.cfg  setup.py  upstream-dev-ci.yaml
.binder/: environment.yml
.github/workflows/: ci.yaml  configure-testpypi-version.py  linting.yaml  pre-commit.yaml  pypi.yaml  testpypi-release.yaml  upstream-dev-ci.yaml
cf_xarray/: __init__.py  accessor.py  accessor_metpy.py  cf_table.py  coding.py  criteria.py  datasets.py  formatting.py  geometry.py  groupers.py  helpers.py  options.py  parametric.py  sgrid.py  tracking.py  ugrid.py  units.py  utils.py
cf_xarray/data/: cf-standard-name-table.xml  test_dataset_vert.nc
cf_xarray/scripts/: cf_table_to_dicts.py  cf_table_to_str.py  make_doc.py  print_versions.py
cf_xarray/tests/: __init__.py  conftest.py  datasets.py  test_accessor.py  test_coding.py  test_geometry.py  test_groupers.py  test_helpers.py  test_options.py  test_parametric.py  test_scripts.py  test_units.py
ci/: doc.yml  environment-all-min-deps.yml  environment-no-optional-deps.yml  environment.yaml  environment.yml  upstream-dev-env.yml
doc/: Makefile  api.rst  bounds.md  coding.md  conf.py  contributing.rst  coord_axes.md  criteria.rst  custom-criteria.md  custom-criteria.rst  dsg.md  faq.md  faq.rst  flags.md  geometry.md  grid_mappings.md  howtouse.md  index.rst  indexing.md  parametricz.md  plotting.md  provenance.md  quickstart.md  roadmap.rst  selecting.md  sgrid_ugrid.md  units.md  user-guide.rst  whats-new.rst
doc/_static/: dataset-diagram-logo.tex  style.css
doc/earthcube/: DC_01_cf-xarray.ipynb  environment.yml
doc/examples/: index.rst  introduction.ipynb
qa/: mvce.py
