[metadata]
name = cf_xarray
license = Apache
url = https://cf-xarray.readthedocs.io
description = A lightweight convenience wrapper for using CF attributes on xarray objects

[options]
packages = cf_xarray
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy >= 1.15
    pandas >= 0.25
    xarray
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[tool:pytest]
python_files = test_*.py
testpaths = cf_xarray/tests

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    .eggs
    doc

[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = cf_xarray
known_third_party = dask,matplotlib,numpy,pandas,pint,pytest,setuptools,sphinx_autosummary_accessors,xarray

# Most of the numerical computing stack doesn't have type annotations yet.

[aliases]
test = pytest

[pytest-watch]
nobeep = True

[rstcheck]
report=warning
ignore_roles=pr,issue,py:meth,py:attr
ignore_directives=ipython,autodata,csv-table
ignore_messages=(is not referenced\.$)
